# coffee-basket-analyzer

./: LICENSE  Makefile  README.md  pyproject.toml  requiremenets.txt  requirements.txt
coffee_basket_analyzer/: 0.02-amb-basketcreation.ipynb  Dockerfile  main.py  mlflow.db  mlflow_server_start.sh  requirements.txt
coffee_basket_analyzer/dtos/: product_dto.py  rule_dto.py  test.ipynb
coffee_basket_analyzer/services/: basket_service.py  fpgrowth_service.py
models/: apriori-model.pkl  eclat-model.pkl  fp-growth-results.csv  fpgrowth-model.pkl
notebooks/: 0.01-amb-datasource.ipynb  0.02-amb-basketcreation.ipynb  0.03-amb-eda.ipynb  1.01-apriori.ipynb  1.01-ated-association.ipynb  1.03-fpgrowth.ipynb
