[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "coffee_basket_analyzer"
version = "0.0.1"
description = "An academic experimentation on the algorithms of association rule analysis applied on a synthetic dataset of coffee shop transactions."
authors = [
  { name = "esi-sba" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["coffee_basket_analyzer"]
force_sort_within_sections = true
